--- a/tableau.html
+++ b/tableau.html
@@ -53,8 +53,8 @@
     <div class="header">
         <p>
             <a href="scratch.html">Home</a> |
-            <a href="/webapp.html">Quotes</a> |
-            <a href="/snake.html">Snake</a> |
+            <a href="webapp.html">Quotes</a> |
+            <a href="snake.html">Snake</a> |
             <a href="#">Tableau</a>
         </p>
     </div>
